added different bindings

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Angular2-00-hello</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="styles.css">
 
     <!-- 1. Load libraries -->
@@ -32,6 +33,6 @@
 
   <!-- 3. Display the application -->
   <body>
-    <my-app>Loading...</my-app>
+    <bindings-app>Loading...</bindings-app>
   </body>
 </html>
